<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/xbox_controller"
            android:title="@string/Control" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/codepen"
            android:title="@string/Zumo" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/material_ui"
            android:title="@string/SigueLinea" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/chemical_weapon"
            android:title="@string/Laberinto" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Conexion" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Exit" />
        </menu>
    </item>

</menu>
